# finance_trade_api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scheduler.py  trading.db
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 071a858406dd_initial_schema.py
alert/: __init__.py  base.py  discord.py  email.py
api/: dashboard.py
backtest/: __init__.py  optimizer.py  runner.py  visualization.py
broker/: __init__.py  base.py  upbit.py
broker/binance/: __init__.py  rest.py  websocket.py
broker/upbit/: __init__.py  rest.py  websocket.py
config/: __init__.py  base.py  dev.py  logging.yaml  prod.py
core/: __init__.py  engine.py  event.py  event_bus_redis.py
data/collector/: account_collector.py  market_collector.py
data/processor/: __init__.py  feature_builder.py  indicator.py
db/: __init__.py  base.py  session.py
db/models/: __init__.py  balance.py  market.py  order.py  position.py  signal.py  system.py  trade.py
db/repositories/: __init__.py  balance_repo.py  base.py  order_repo.py  position_repo.py  signal_repo.py  trade_repo.py
docs/: extension_proposal.md  functionality.md  project_evaluation_report_20260320.md  requirements.md  strategy_history.md  userflow.md
execution/: __init__.py  order_manager.py  risk.py  stop_loss.py
market/: __init__.py  feed.py  snapshot.py
portfolio/: __init__.py  account.py  position.py
report/: daily_report.py
strategy/: __init__.py  aggregator.py  base.py  registry.py  store.py
tests/: conftest.py
(+25 files in other folders)
