[tool.poetry]
name = "finance-trade-api"
version = "0.1.0"
description = "Automated cryptocurrency trading system"
authors = ["trader"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
pydantic-settings = "^2.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
aiosqlite = "^0.20"        # SQLite (dev)
asyncpg = "^0.29"          # PostgreSQL (prod)
httpx = "^0.27"
websockets = "^12.0"
PyJWT = "^2.8"
apscheduler = "^3.10"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
